# STM32_openOCD

./: README.md
project/: CMakeLists.txt
project/cmake/: project.cmake  toolchain.cmake
tools/: blinky_example.elf  gdb_example.cmd  start_gdb.ps1  start_openocd.ps1  stlinkv2_stm32f103c8_blue_pill.cfg
